<resources>
    <string name="app_name">Veda Bills</string>
    <string name="sender_segment">Sender Segment</string>
    <string name="company_name">Company Name</string>
    <string name="gst_number">GST Number</string>
    <string name="address">Address</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="email">Email</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="random">Random</string>
    <string name="place_of_supply">Place of Supply</string>
    <string name="reverse_charge">Reverse Charge</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="recipient_segment">Recipients Segment</string>
    <string name="billed_to">Billed To</string>
    <string name="shipped_to">Shipped To</string>
    <string name="bank_details">Bank Details</string>
    <string name="cif_number">CIF Number</string>
    <string name="branch_name">Branch Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="product_list">Product List</string>
    <string name="add_product">Add Product</string>
    <string name="create_invoice_description">Create invoices within 10 seconds and easily share invoice PDFs globally with a Chrome link.</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="verify_button">Verify</string>
    <string name="otp_code_hint">OTP Code</string>
    <string name="verify_otp_button">Verify OTP</string>
    <string name="invoice_name">file Name</string>
    <string name="invoice_sent_to">Sent To</string>
    <string name="invoice_dated">Dated</string>
    <string name="enter_phone_number">Please enter a phone number.</string>
    <string name="enter_otp_code">Please enter the OTP code.</string>
    <string name="otp_sent">OTP sent. Please check your phone.</string>
    <string name="verification_failed">Verification failed. Please try again.</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed. Please try again.</string>
    <string name="hint_description">Description</string>
    <string name="hint_hsn_code">HSN Code</string>
    <string name="hint_unit">Unit</string>
    <string name="hint_mrp">MRP</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_list_price">List Price</string>
    <string name="hint_discount">Discount</string>
    <string name="hint_cgst">CGST%</string>
    <string name="hint_sgst">SGST%</string>
    <string name="dated">"Dated: "</string>
    <string name="sent_to">"Sent to: "</string>
    <string name="no_application_available">No application available to view PDF</string>
    <string name="failed_to_generate_link">Failed to parse link response</string>
    <string name="item_added">"Item added successfully!"</string>
    <string name="add_company_details">Add Company Details</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="add_items">Add Items</string>
    <string name="add_new">Select Action</string>
    <string name="bank_added">Bank details added successfully!</string>
    <string name="company_added">Company details added successfully!</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
</resources>