<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:ignore="Autofill,TextFields">

    <EditText
        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM 1234567890-,.!@%^*()"
        android:id="@+id/input_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name" />

    <EditText
        android:id="@+id/input_company_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/input_gst_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gst_number" />

    <EditText
        android:id="@+id/input_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone_number" />
</LinearLayout>
